# wasm-avif-threads

./: Cargo.toml  README.md  build.sh
example/avif/: index.html  package-lock.json  package.json  server.py  vite.config.js
example/avif/public/: server.py
example/avif/src/: main.ts
main/: LICENSE_MIT  package-lock.json  package.json  vite.config.js
main/src/: index.d.ts  index.js  worker.js  worker_threads_bg.js
src/: lib.rs  pool.rs
worker/: Cargo.toml
worker/src/: lib.rs
