[package]
name = "wasm-avif-threads"
version = "0.1.0-alpha.1"
description = "avif encoder"
authors = ["gitigi <stephengitigi@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Gitigi/wasm-avif"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.41"
js-sys = "0.3.69"
rayon = "1.1.0"
imgref = "1.9.4"
futures-channel-preview = "0.3.0-alpha.18"
ravif = { version = "0.11" }
base64 = "0.22.1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
const_format = "0.2.32"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[dependencies.web-sys]
version = "0.3.23"
features = [
  'CanvasRenderingContext2d',
  'ErrorEvent',
  'Event',
  'ImageData',
  'Navigator',
  'Window',
  'Worker',
  'DedicatedWorkerGlobalScope',
  'MessageEvent',
  'Url',
  'Blob',
]


[profile.release]
lto = true
opt-level = 'z'
# strip = true
panic = "abort"
codegen-units = 1

# [package.metadata.wasm-pack.profile.dev]
# wasm-opt = false

# [package.metadata.wasm-pack.profile.profiling]
# wasm-opt = false

# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false
